--- a/DAD/control_parental/webroot/css/style.css
+++ b/DAD/control_parental/webroot/css/style.css
@@ -20,3 +20,69 @@
     font-size: 27px;
 }
 
+.placa{
+    width: 30%;
+    margin:0 auto;
+    margin-top: 20px;
+    height: 200px;
+    background-color: #F1F1F1;
+    color: #5f5f5f;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    border-top: 2px solid #4CAF50 ;
+}
+
+.button{
+    background-color: #4CAF50;
+    color: white;
+    border: 0px solid;
+    margin: 5px;
+    height: 40px;
+    cursor: pointer;
+}
+.button:hover{
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+
+}
+button:focus {
+    outline:0;
+}
+.desactivar{
+    background-color: red;
+}
+
+.placa h4, p{
+
+    margin-left: 5%;
+    
+}
+.activar, .desactivar{
+    margin-left: 5%;
+
+}
+
+.fa-microchip{
+    margin-right: 3%;
+}
+
+/* DIALOG */
+
+.ui-dialog{
+    position:"fixed";
+    border-radius: 2px;
+    background-color: #5f5f5f;
+    color: #F1F1F1;
+}
+
+.ui-dialog:focus{
+
+    outline:0;
+}
+
+#page-mask {
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
