--- a/DAD/control_parental/webroot/css/style.css
+++ b/DAD/control_parental/webroot/css/style.css
@@ -88,3 +88,18 @@ button:focus {
     left: 0;
   }
 
+td{
+    text-align: center;
+    width: auto;
+    margin: 10px;
+    border-top: 1px solid #F1F1F1;
+    
+}
+
+table { 
+    border-spacing: 20px; 
+    border-collapse: collapse;
+    width: 100%;
+    border-bottom: 1px solid #F1F1F1;
+    
+  }
